--- a/labbay_store/pubspec.yaml
+++ b/labbay_store/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_screenutil: ^5.6.1
   flutter_svg: ^2.0.0+1
   flutter_switch: ^0.3.2
+  fl_chart: ^0.60.0
 
 dev_dependencies:
   flutter_test:
